--- a/Doris.html
+++ b/Doris.html
@@ -35,7 +35,7 @@
                 <li><a href="Fiona.html">Fiona</a></li>
                 <li><a href="Lord_farquaad.html">Lord Farquaad</a></li>
                 <li><a href="Pinoquio.html">Pinóquio</a></li>
-                <li><a href="Irma.html">Doris</a></li>
+                <li><a href="Doris.html">Doris</a></li>
                 <li><a href="Principe_Encantado.html" rel="next">Princípe Encantado</a></li>
             </ul>
         </li>
