--- a/Shrek.html
+++ b/Shrek.html
@@ -55,7 +55,7 @@
             <picture>
                 <source media="(max-width: 750px)" srcset="imagens/Shrek_banheiro-P.jpg">
                 <source media="(max-width: 1050px)" srcset="imagens/Shrek_banheiro-M.jpg">        
-                <img src="imagens/Shrek_banheiro-G.jpg" alt="Shrek, logo após terminar sua arte barroca no banheiro">
+                <img src="imagens/Shrek_banheiro-G.jpg" alt="Shrek, logo após terminar sua arte barroca no banheiro.">
             </picture>
     </div class="multimidia">
 
