--- a/Shrek_1.html
+++ b/Shrek_1.html
@@ -3,7 +3,6 @@
 <html lang="pt-br">
 
 <head>
-
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -45,6 +44,13 @@
         <li><a href="cenas_iconicas.html">Cenas Icônicas</a></li>
         </ul>
     </nav>
+
+    <main>
+        <!--Ideia pras páginas de Filmes, Link pra ver o Filme na Disney e etc-->
+        <!--Pode ir mudando a Plataforma de acordo com os filmes, tipo apple tv e google filmes-->
+        <a href="https://www.netflix.com/br/title/60020686?source=35" target="_blank" rel="external">Assista Shrek 1 na Netflix</a>
+
+    </main>
 
 </body>
 
