--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <nav>
         <ul>
         <li><a href="index.html">Página Inicial</a></li>
-    
-        <li><a href="filmesDaSaga.html" rel="next">Filmes da Saga</a>
+            
+        <li><a>Filmes da Saga</a>
             <ul>
-                <li><a href="Shrek_1.html">Shrek 1</a></li>
+                <li><a href="Shrek_1.html" rel="next">Shrek 1</a></li>
                 <li><a href="Shrek_2.html">Shrek 2</a></li>
                 <li><a href="Shrek_3.html">Shrek 3</a></li>
                 <li><a href="Shrek_4.html">Shrek 4</a></li>
@@ -29,7 +29,7 @@
             </ul>
         </li>
 
-        <li><a href="personagens.html">Personagens</a>
+        <li><a>Personagens</a>
             <ul>
                 <li><a href="Shrek.html">Shrek</a></li>
                 <li><a href="Burro.html">Burro</a></li>
@@ -56,9 +56,9 @@
 
         <div class="multimidia">
             <picture>
-                <source media="(max-width: 750px)" srcset="imagens/capa_shrek-G.jpg">
-                <source media="(max-width: 1050px)" srcset="imagens/capa_shrek-G.jpg">        
-                <img src="imagens/capa_shrek-G.jpg" alt="Shrek, logo após terminar sua arte barroca no banheiro">
+                <source media="(max-width: 750px)" srcset="imagens/capa_shrek-P.jpg">
+                <source media="(max-width: 1050px)" srcset="imagens/capa_shrek-M.jpg">        
+                <img src="imagens/capa_shrek-G.jpg" alt="Capa do Shrek 1 com Fiona, Shrek e Burro fugindo da Dragoa do Castelo.">
             </picture>
     </div class="multimidia">
 
