--- a/Lord_farquaad.html
+++ b/Lord_farquaad.html
@@ -24,25 +24,23 @@
                 <li><a href="Shrek_2.html">Shrek 2</a></li>
                 <li><a href="Shrek_3.html">Shrek 3</a></li>
                 <li><a href="Shrek_4.html">Shrek 4</a></li>
-                <li><a href="Shrek_5.html">Shrek 5?</a></li>
             </ul>
         </li>
 
-        <li><a href="personagens.html">Personagens</a>
+        <li><a>Personagens</a>
             <ul>
                 <li><a href="Shrek.html">Shrek</a></li>
                 <li><a href="Burro.html">Burro</a></li>
                 <li><a href="Fiona.html">Fiona</a></li>
                 <li><a href="Lord_farquaad.html">Lord Farquaad</a></li>
-                <li><a href="Pinoquio.html" rel="next">Pinóquio</a></li>
-                <li><a href="Doris.html">Doris</a></li>
+                <li><a href="Doris.html" rel="next">Doris</a></li>
                 <li><a href="Principe_Encantado.html">Princípe Encantado</a></li>
             </ul>
         </li>
         
         <li><a href="jogos_sensacionais.html">Jogos Sensacionais</a></li>
     
-        <li><a href="cenas_iconicas.html">Cenas Icônicas</a></li>
+        <li><a href="cenas_e_memes.html">Cenas Icônicas e Memes</a></li>
         </ul>
     </nav>
 
