--- a/Shrek_3.html
+++ b/Shrek_3.html
@@ -28,13 +28,12 @@
             </ul>
         </li>
 
-        <li><a href="personagens.html">Personagens</a>
+        <li><a>Personagens</a>
             <ul>
                 <li><a href="Shrek.html">Shrek</a></li>
                 <li><a href="Burro.html">Burro</a></li>
                 <li><a href="Fiona.html">Fiona</a></li>
                 <li><a href="Lord_farquaad.html">Lord Farquaad</a></li>
-                <li><a href="Pinoquio.html">Pinóquio</a></li>
                 <li><a href="Doris.html">Doris</a></li>
                 <li><a href="Principe_Encantado.html">Princípe Encantado</a></li>
             </ul>
@@ -42,7 +41,7 @@
         
         <li><a href="jogos_sensacionais.html">Jogos Sensacionais</a></li>
     
-        <li><a href="cenas_iconicas.html">Cenas Icônicas</a></li>
+        <li><a href="cenas_e_memes.html">Cenas Icônicas e Memes</a></li>
         </ul>
     </nav>
 
