--- a/Shrek_4.html
+++ b/Shrek_4.html
@@ -24,17 +24,15 @@
                 <li><a href="Shrek_2.html">Shrek 2</a></li>
                 <li><a href="Shrek_3.html">Shrek 3</a></li>
                 <li><a href="Shrek_4.html">Shrek 4</a></li>
-                <li><a href="Shrek_5.html" rel="next">Shrek 5?</a></li>
             </ul>
         </li>
 
-        <li><a href="personagens.html">Personagens</a>
+        <li><a>Personagens</a>
             <ul>
-                <li><a href="Shrek.html">Shrek</a></li>
+                <li><a href="Shrek.html" rel="next">Shrek</a></li>
                 <li><a href="Burro.html">Burro</a></li>
                 <li><a href="Fiona.html">Fiona</a></li>
                 <li><a href="Lord_farquaad.html">Lord Farquaad</a></li>
-                <li><a href="Pinoquio.html">Pinóquio</a></li>
                 <li><a href="Doris.html">Doris</a></li>
                 <li><a href="Principe_Encantado.html">Princípe Encantado</a></li>
             </ul>
@@ -42,7 +40,7 @@
         
         <li><a href="jogos_sensacionais.html">Jogos Sensacionais</a></li>
     
-        <li><a href="cenas_iconicas.html">Cenas Icônicas</a></li>
+        <li><a href="cenas_e_memes.html">Cenas Icônicas e Memes</a></li>
         </ul>
     </nav>
 
