--- a/cenas_e_memes.html
+++ b/cenas_e_memes.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cenas Icônicas, Aparições e Memes</title>
+    <title>Cenas Icônicas e Memes</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="imagens\favicon.ico" type="image/x-icon">
 
@@ -15,7 +15,6 @@
 
 <body>
 
-    <!--
     <script>
         function maior() {
             var matricula = window.confirm("Pera, pera, pera, pera, Você têm mais de 18 anos de idade?");
@@ -28,56 +27,55 @@
         }
         maior();
     </script>
-    -->
 
     <nav> <!--Menu-->
         <ul>
             <li><a href="index.html" rel="prev">Página Inicial</a></li>   
-            <li><a href="filmesDaSaga.html">Filmes da Saga</a>
+            <li><a>Filmes da Saga</a>
                 <ul>
                     <li><a href="Shrek_1.html">Shrek 1</a></li>
                     <li><a href="Shrek_2.html">Shrek 2</a></li>
                     <li><a href="Shrek_3.html">Shrek 3</a></li>
                     <li><a href="Shrek_4.html">Shrek 4</a></li>
-                    <li><a href="Shrek_5.html">Shrek 5?</a></li>
                 </ul>
             </li>
 
-            <li><a href="personagens.html">Personagens</a>
+            <li><a>Personagens</a>
                 <ul>
                     <li><a href="Shrek.html">Shrek</a></li>
                     <li><a href="Burro.html">Burro</a></li>
                     <li><a href="Fiona.html">Fiona</a></li>
                     <li><a href="Lord_farquaad.html">Lord Farquaad</a></li>
-                    <li><a href="Pinoquio.html">Pinóquio</a></li>
                     <li><a href="Doris.html">Doris</a></li>
                     <li><a href="Principe_Encantado.html">Princípe Encantado</a></li>
                 </ul>
             </li>
         
             <li><a href="jogos_sensacionais.html">Jogos Sensacionais</a></li>   
-            <li><a href="cenas_iconicas.html">Cenas Icônicas</a></li>
+            <li><a href="cenas_e_memes.html">Cenas Icônicas e Memes</a></li>
         </ul>
     </nav>
     
     <main>
 
-        <h1>Cenas Icônicas, Aparições e Memes</h1>
+        <h1>Cenas Icônicas e Memes</h1>
         <p>O <s>protagonista de nossas vidas</s> Ogrão Shrek aassim como O Bruxo, Ronaldinho Gaúcho partilha do trono de personagens com Aparições
         e cenas Icônicas, nesta página, encontre uma compilação das mesmas.</p><br>
 
-        <ul><!--Cenas Icônicas, Aparições e Memes-->
+        <ul>
             <li><h2>Cenas Icônicas</h2>
                 <ul>
-                    <li><!--Pinóquio-->
+                    <li>
                         <h3>Roupa Íntima Feminina</h3>
-                        <p>Aqui vai o assunto do Pinóquio</p>
-                        <br><br>
+                        <p>Uma cena bem memorável é a frangada que o Pinóquio dá lá no segundo filme, quando ele e mais uma galera vão resgatar o Shrek, o Burro e o Gato de Botas na prisão.</p>
+                        <div class="videoYoutube">
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/KBwTkOGd-x4?start=31" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div class="videoYoutube">
                     </li>
                 </ul>
 
                 <ul>
-                    <li><!--Netflix-->
+                    <li>
                         <h3>Cadê a Música?</h3>
                         <p>Uma das cenas mais Icônicas dos filmes é a cena em que Shrek sai de seu banheiro logo no começo do primeiro filme, porém você já viu essa cena sem a música de fundo?</p>
                         <p>Bem, não sei como, mas a Netflix sabe e ela resolveu compartilhar com a gente através do perfil dela no YouTube:</p>
@@ -93,25 +91,27 @@
                 </ul>
             </li>
 
-            <li><h2>Aparições</h2>
+            <li><h2>Memes</h2>
                 <ul>
-                    <li><!--Stefhany-->
+                    <li>
+                        <h3>Gravidez</h3>
+                        <p>Por algum motivo que desconheço, o Shrek foi participante de uma das coisas mais bizarras que já vi por aí na internet, o meme da gravidez</p>
+                        <p>Apesar de ser um pouco perturbador, as pessoas racham o bico de ver memes onde o Shrek está grávido, ou engravidou alguém.</p>
+                        <p>Teorizo que nosso amigão Shrek emite tantos feromônios do acasalamento que ele atrai personagens de até mesmo outros universos cinematográficos para copular com ele.</p>
+                        <picture>
+                            <source media="(max-width: 750px)" srcset="imagens/shrek_gravido-P.jpg">
+                            <source media="(max-width: 1050px)" srcset="imagens/shrek_gravido-M.jpg">
+                            <img src="imagens/shrek_gravido-G.jpg" alt="Uma imagem de Shrek, grávido de seu parceiro Batman, através de uma espécime de Zoom, podemos ver que o filho de Shrek é o Sonic.">
+                        </picture>
+                    </li>
+
+                    <li>
                         <h3>Eu sou Stefhany</h3>
                         <p>Em primeiro lugar, temos essa participação de se cair o cu da bunda de ninguém mais e ninguém menos que Shrek no clipe de Eu Sou Stefhany (Cross Fox) de Stefhany Absoluta.</p>
                         <p>Isso mesmo, nosso adorado verdão aparece em uma curta cena, em 0:56, observe:</p>               
-                        <div class="video">
-                            <iframe width="450" height="315" src="https://www.youtube.com/embed/ixPhvugyrTo?start=56" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>        
-                        </div class="video">
-                    </li>
-                </ul>
-            </li>
-
-            <li><h2>Memes</h2>
-                <ul>
-                    <li><!--Gravido-->
-                        <h3>Gravidez</h3>
-
-
+                        <div class="videoYoutube">
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/ixPhvugyrTo?start=56" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>        
+                        </div class="videoYoutube">
                     </li>
                 </ul>
             </li>
