--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
                 <li><a href="Shrek_2.html">Shrek 2</a></li>
                 <li><a href="Shrek_3.html">Shrek 3</a></li>
                 <li><a href="Shrek_4.html">Shrek 4</a></li>
-                <li><a href="Shrek_5.html">Shrek 5?</a></li>
             </ul>
         </li>
 
@@ -35,7 +34,6 @@
                 <li><a href="Burro.html">Burro</a></li>
                 <li><a href="Fiona.html">Fiona</a></li>
                 <li><a href="Lord_farquaad.html">Lord Farquaad</a></li>
-                <li><a href="Pinoquio.html">Pinóquio</a></li>
                 <li><a href="Doris.html">Doris</a></li>
                 <li><a href="Principe_Encantado.html">Princípe Encantado</a></li>
             </ul>
@@ -43,7 +41,7 @@
         
         <li><a href="jogos_sensacionais.html">Jogos Sensacionais</a></li>
     
-        <li><a href="cenas_iconicas.html">Cenas Icônicas</a></li>
+        <li><a href="cenas_e_memes.html">Cenas Icônicas e Memes</a></li>
         </ul>
     </nav>
 
@@ -60,9 +58,9 @@
                 <source media="(max-width: 1050px)" srcset="imagens/capa_shrek-M.jpg">        
                 <img src="imagens/capa_shrek-G.jpg" alt="Capa do Shrek 1 com Fiona, Shrek e Burro fugindo da Dragoa do Castelo.">
             </picture>
-    </div class="multimidia">
+        </div class="multimidia">
 
-        <p>Já aqui no próprio menu, já podemos contar com essa beleza criada em conjunto com a banda Smash Mouth: </p>
+        <p>Já aqui no próprio menu, podemos contar com essa beleza criada em conjunto com a banda Smash Mouth: </p>
 
         <audio controls preload="auto">
             <source src="midia/All_Star-Smash_Mouth.mp3" type="audio/mpeg">
