--- a/Burro.html
+++ b/Burro.html
@@ -61,7 +61,7 @@
         <p>No entanto, Burro acidentalmente é atingido por pó de fada (que Peter Pan estava levando para vender), dando-lhe a habilidade de voar. Burro se expõe gabando-se enquanto voa para cima, mas então a magia se esvai, fazendo-o cair no chão.</p>
         <p>Os guardas o abordam, mas ele escapa e foge para a floresta, até esbarrar em um ogro. Embora aparentemente descontente, o ogro afugenta os cavaleiros em vez de entregar o Burro conforme eles ordenam.</p>
         <p>Agradecido e impressionado com sua ajuda, Burro segue o ogro e decide ficar com ele por não ter para onde ir. Cansando-se rapidamente da presença da mula, ele tenta assustá-lo rugindo, mas Burro não se incomoda, apenas observando que precisa de alguns tic-tacs para o hálito.</p>
-        <p>Ele continua a caminhar ao lado dele, cantarlando (através da música) que não tem amigos, exasperando ainda mais o herói verde. Quando ele tenta trazer sua família como um motivo para Burro ir embora, ele não se preocupa ou se incomoda com a revelação e pergunta o nome do ogro. Parecendo um tanto comovido, ele responde que seu nome é Shrek.</p>
+        <p>Ele continua a caminhar ao lado dele, cantarolando (através da música) que não tem amigos, exasperando ainda mais o herói verde. Quando ele tenta trazer sua família como um motivo para Burro ir embora, ele não se preocupa ou se incomoda com a revelação e pergunta o nome do ogro. Parecendo um tanto comovido, ele responde que seu nome é Shrek.</p>
 
     </main>
 
