--- a/Doris.html
+++ b/Doris.html
@@ -10,6 +10,7 @@
     <title>Doris</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="imagens\favicon.ico" type="image/x-icon">
+
 </head>
 
 <body>
@@ -43,6 +44,21 @@
         <li><a href="cenas_e_memes.html">Cenas Icônicas e Memes</a></li>
         </ul>
     </nav>
+
+    <main>
+
+        <h1>Doris</h1>
+
+        <div class="multimidia">
+            <source media="(max-width: 750px)" srcset="imagens/Doris-P.jpg">
+            <source media="(max-width: 1050px)" srcset="imagens/Doris-M.jpg">
+            <img src="imagens/Doris-G.jpg" alt="Uma imagem de Doris.">
+        </div class="multimidia">
+        <p>Embora Doris não apareça no primeiro filme, ela é mencionada, junto com Mabel, pelo Espelho Mágico quando ele diz que “os hobbies (de Cinderela) envolvem cozinhar e limpar para suas duas irmãs malvadas”.</p>
+        <p>Doris é vista pela primeira vez em Shrek 2, quando o Rei Harold entra secretamente no bar Maçã Envenenada, na qual ela trabalha como bartender. Ela recomenda Gato de Botas ao rei para a tarefa de assassinar Shrek.</p>
+        <p>Perto do clímax do filme, Doris aponta para o Rei Harold uma porta guardada pelos guarda-costas da Fada Madrinha, atrás da qual o Príncipe Encantado e a Fada Madrinha se encontram secretamente.</p>
+
+    </main>
 
 </body>
 
