--- a/Fiona.html
+++ b/Fiona.html
@@ -43,7 +43,26 @@
         <li><a href="cenas_e_memes.html">Cenas Icônicas e Memes</a></li>
         </ul>
     </nav>
-    
+
+    <main>
+        
+        <h1>Fiona</h1>
+
+        <div class="multimidia">
+            <source media="(max-width: 750px)" srcset="imagens/fiona-P.jpg">
+            <source media="(max-width: 1050px)" srcset="imagens/fiona-M.jpg">
+            <img src="imagens/fiona-G.jpg" alt="Uma imagem 3x4 da Fiona.">
+        </div class="multimidia">
+
+        <p>Fiona nasceu no reino de Tão, Tão, Distante como filha única do rei Harold e da rainha Lillian. Quando menina, uma maldição foi lançada sobre Fiona por uma bruxa. A maldição de Fiona faz com que ela assuma a forma de um ogro entre o pôr do sol e o nascer do sol, e só pode ser quebrada pelo beijo de seu verdadeiro amor.</p>
+        <p>Os pais de Fiona fizeram o possível para esconder sua maldição do mundo, mantendo-a em casa à noite para que ninguém descobrisse sua forma de ogro. Mas, eventualmente, eles procuraram a ajuda da Fada Madrinha, que os prendeu em um castelo guardado por um dragão para esperar que seu verdadeiro amor a resgatasse.</p>
+        <p>Eles também concordaram que o Príncipe Encantado seria aquele que eventualmente resgataria Fiona (a maneira de Harold retribuir um favor à Fada Madrinha). E então Fiona, que ainda era apenas uma menina, foi aprisionada no quarto mais alto da torre mais alta da Fortaleza do Dragão para esperar que seu verdadeiro amor a libertasse e quebrasse sua maldição. Ao longo dos anos, muitos cavaleiros tentaram resgatá-la de sua torre apenas para serem mortos por seu dragão guardião.</p>
+        <p>Lord Farquaad é informado pelo Espelho Mágico que, para ser rei de Duloc, ele deve primeiro se casar com uma princesa. Ele escolhe Fiona e realiza um torneio em que o vencedor terá o "privilégio" de resgatá-la da Fortaleza do Dragão para ele. Shrek se torna o inesperado campeão do torneio depois de derrotar todos os cavaleiros de Farquaad e concorda em resgatar Fiona em troca da remoção das criaturas de conto de fadas de seu pântano.</p>
+        <p>Fiona conhece Shrek pela primeira vez quando ele atravessa o telhado de sua torre após ser jogado pelo dragão. Vestindo peças de armadura retiradas de cavaleiros mortos na Fortaleza do Dragão, Shrek é confundido por Fiona com seu "Príncipe Encantado". Ela finge dormir, mas em vez de receber o beijo de seu verdadeiro amor, Shrek a sacode para acordá-la e se arrasta sem cerimônia para fora de sua torre.</p>
+        <p>Ele é tudo menos o cavaleiro de armadura brilhante que Fiona esperava; ele não lhe recita sua poesia, ela lhe dá seu lenço como sinal de gratidão apenas para ele enxugar o rosto com ele, e Shrek nem matou o dragão ainda. Shrek volta para recuperar Burro do Dragão e, na perseguição que se segue, os tês escapam por pouco do castelo. Fiona é grata a seu salvador, apesar de seu comportamento nada cavalheiresco.</p>
+
+    </main>
+
 </body>
 
 </html>
