--- a/Lord_farquaad.html
+++ b/Lord_farquaad.html
@@ -43,6 +43,28 @@
         <li><a href="cenas_e_memes.html">Cenas Icônicas e Memes</a></li>
         </ul>
     </nav>
+    
+    <main>
+
+        <h1>Lord Farquaad</h1>
+
+        <div class="multimidia">
+                <source media="(max-width: 750px)" srcset="imagens/lord_Farquaad-P.jpg">
+                <source media="(max-width: 1050px)" srcset="imagens/lord_Farquaad-M.jpg">        
+                <img src="imagens/lord_Farquaad-G.jpg" alt="Uma imagem do Lord Farquaad.">
+        </div class="multimidia">
+
+        <p> Lord Farquaad era o único governante de Duloc que se esforça para tornar tudo em seu reino completamente 'perfeito'. No entanto, todas as criaturas de contos de fadas não se encaixam em sua ideia de um "mundo perfeito", então ele as expulsa de Duloc.</p>
+        <p>Farquaad oferece recompensas ao cidadão que entregasse alguma criatura a ele, que posteriormente os colocam em gaiolas para serem transferidos para outro local. É revelado que eles são realocados à força de Duloc para um pântano, que sem o conhecimento de Farquaad, é a casa de um ogro local chamado Shrek.</p>
+        <p>De volta à masmorra de seu castelo, Farquaad e seu capanga Thelonious torturam Biscoito para revelar a localização das outras criaturas de conto de fadas. Porém Biscoito se recusa a cooperar e cospe no rosto de Farquaad. O Capitão dos Guardas interrompe o interrogatório para anunciar que encontraram o Espelho Mágico, para grande a empolgação do Lord.</p>
+        <p>Farquaad se gaba de que Duloc é o "reino mais perfeito de todos", apenas para que o  Espelho informe-o de que ele não é realmente um rei e, portanto, Duloc não é um reino oficial. Farquaad considera isso um insulto e ameaça o Espelho, forçando-o a elaborar que Farquaad pode se tornar um rei se ele se casar com uma princesa.</p>
+        <p>Em uma paródia de programas de namoro, o Espelho apresenta três princesas elegíveis para Lord Farquaad escolher: Cinderela, Branca de Neve e a Princesa Fiona. Conquistado por sua beleza (e pela sugestão de Thelonius), Farquaad escolhe a princesa Fiona, que por acaso está trancada em um castelo guardado por um dragão feroz.</p>
+        <p>Lord Farquaad então começa a traçar um plano para resgatar sua futura rainha, e quando o Espelho tenta avisá-lo sobre o que acontece ao pôr do sol, Farquaad o silencia. Tendo elaborado um plano, o Lord ordena a seu capitão que reúna os melhores Cavaleiros de Duloc para um torneio.</p>
+        <p>O torneio é realizado em uma arena com os cidadãos de Duloc assistindo enquanto Farquaad anuncia seu plano: o vencedor do torneio será enviado para resgatar Fiona para ele e ele acrescenta que caso o vencedor falhe, o próximo vice-campeão irá assumir o seu lugar e assim por diante até que um deles seja bem sucedido.</p>
+        <p>Assim que ele anuncia o início do torneio, ele é interrompido por Shrek e Burro, que vêm exigir que as criaturas de contos de fadas sejam removidas do pântano de Shrek.</p>
+        <p> Desgostoso com Shrek, Farquaad declara que o cavaleiro que o matar será nomeado campeão. Apesar dos melhores esforços dos cavaleiros, todos eles são derrotados com relativa facilidade por Shrek e Burro. Os arqueiros de Farquaad miram em Shrek, mas Farquaad, aproveitando uma oportunidade de ouro, declara Shrek o campeão do torneio. Ele faz uma proposta a ele: se ele resgatar a princesa Fiona, Farquaad livrará o pântano de Shrek de todas as criaturas indesejadas dos contos de fadas.</p>
+
+    </main>
 
 </body>
 
