--- a/Principe_Encantado.html
+++ b/Principe_Encantado.html
@@ -44,6 +44,25 @@
         </ul>
     </nav>
 
+    <main>
+
+        <h1>Príncipe Encantado</h1>
+
+        <div class="multimidia">
+            <source media="(max-width: 750px)" srcset="imagens/encantado-P.jpg">
+            <source media="(max-width: 1050px)" srcset="imagens/encantado-M.jpg">        
+            <img src="imagens/encantado-G.jpg" alt="Um wallpaper muito legal do Príncipe Encantado">
+        </div class="multimidia">
+
+        <p>Encantado viaja uma longa distância a cavalo até a Fortaleza do Dragão para resgatar Fiona. Para sua surpresa, ele encontra o Lobo Mau em sua cama, que lhe diz que Fiona já foi resgatada e está em lua de mel</p>
+        <p>Mais tarde é revelado que Encantado é, de fato, filho da Fada Madrinha e que ela quer que seu filho se case com Fiona para que Encantado possa se tornar rei de Tão Tão Distante (semelhante às intenções de Lord Farquaad do primeiro filme). Pode-se argumentar que, depois de prender Fiona, sempre foi seu plano que Encantado a resgatasse, Shrek sendo um problema imprevisto.</p>
+        <p>Mais tarde no filme, depois que Shrek, Burro e seu novo amigo Gato de Botas roubam a poção Felizes Para Sempre da Fada Madrinha e destroem sua fábrica, Encantado entra, percebe a bagunça e pergunta o que aconteceu, e ela diz a ele que Shrek estava lá. Encantado então exige saber onde Shrek está para que ele possa matá-lo com uma espada. No entanto, a Fada Madrinha o convence a desistir, relembrando-o que ele ainda será rei.</p>
+        <p>Mais tarde, Encantado engana Fiona fazendo-a acreditar que ele é Shrek, tendo se tornado humano por uma poção "Felizes para sempre". Fiona continua altamente desconfiada de Encantado, já que ele não age como Shrek, o que força a Fada Madrinha a fazer Harold dar a Fiona uma poção do amor que a fará se apaixonar pelo primeiro homem que ela beijar.</p>
+        <p>No baile de casamento de "Shrek" e Fiona, Encantado pressiona Fiona a dançar com ele. Em vários pontos, ele tenta seduzir Fiona a beijá-lo, quase conseguindo até que Shrek e Burro interrompem a dança. Na confusão que se seguiu, Encantado força um beijo em Fiona, acreditando que ela agora está apaixonada por ele.</p>
+        <p>No entanto, Fiona dá uma cabeçada nele, fazendo-o desmaiar e Harold revela que nunca deu a Fiona a poção do amor. Encantado acorda para jogar a varinha da Fada Madrinha de volta para ela, e mais tarde é visto sendo forçado a dançar por <a href="Doris.html">Doris.</a></p>
+
+    </main>
+
 </body>
 
 </html>
