--- a/Shrek.html
+++ b/Shrek.html
@@ -48,17 +48,20 @@
     <main>
         <h1>Shrek</h1>
     
-
-    <div class="multimidia">
+        <div class="multimidia">
             <picture>
                 <source media="(max-width: 750px)" srcset="imagens/Shrek_banheiro-P.jpg">
                 <source media="(max-width: 1050px)" srcset="imagens/Shrek_banheiro-M.jpg">        
                 <img src="imagens/Shrek_banheiro-G.jpg" alt="Shrek, logo após terminar sua arte barroca no banheiro.">
             </picture>
-    </div class="multimidia">
+        </div class="multimidia">
 
-        <p>Shrek é <s>Jesus Cristo</s> um Ogro, que vivia sozinho na solidão, porém, sua vida mudou depois que conheceu seu amigo Burro, assim como outras pessoas pelo caminho.</p>
-        <p> Ele se casou com a princesa Fiona, filha e filha única da rainha Lillian e do falecido rei Harold, os governantes do reino de Tão Tão Distante, antes que o governo do reino fosse posteriormente passado para Arthur Pendragon, sobrinho do rei Harold.</p>
+        <p><s>Jesus Cristo</s> Shrek vivia sozinho em um pântano no meio da floresta. A princípio, ele parece gostar de sua privacidade e gosta de assustar as pessoas, mas nunca as machucou. Ele gostava de sua própria vida em casa, como tomar banhos de lama, escovar os dentes com pasta de insetos para tornar o hálito mais desagradável e fedorento e peidar na piscina.</p>
+        <p>Shrek estava vivendo um dia normal em seu pântano e uma noite, ele notou um grupo de moradores armados com tochas e forcados, que tentavam caçá-lo. Esgueirando-se por trás deles, Shrek consegue espantá-los. Quando ele percebeu e pegou um pôster que um dos moradores da cidade deixou para trás, ele logo jogou fora, sem se importar muito com isso.</p>
+        <p>O pôster foi revelado como um pôster de procurado para todas as criaturas de contos de fadas. Um dia na floresta, um burro falante encontrou Shrek enquanto era perseguido por um grupo de guardas que trabalhavam para Lord Farquaad, o "rei" de Duloc. O capitão dos guardas Duloc declara a Shrek que ele está preso, mas aos poucos fica com medo quando o ogro se aproxima deles. Shrek os assusta sem esforço e salva Burro.</p>
+        <p>Burro grato, agradece Shrek repetidamente (para irritação do mesmo) e o ogro o convence a passar a noite do lado de fora da casa de Shrek. No entanto, mais criaturas de contos de fadas logo chegam e começam a superlotar seu pântano. Shrek exige saber por que eles vieram e descobre que Farquaad os jogou lá.</p>
+        <p>Indignado, Shrek leva Burro com ele e vai até Farquaad para exigir seu pântano de volta. Ao chegar a Duloc, Shrek interrompe um torneio realizado por Farquaad para determinar qual cavaleiro ele enviará para resgatar a princesa Fiona. Ao notar Shrek, Farquaad decidiu desafiar os cavaleiros a matar Shrek para que aquele que o matasse se tornasse campeão, mas Shrek derrota facilmente todos eles, com a ajuda de Burro.</p>
+        <p>Depois Shrek garantiu a vitória, isso intriga Farquaad e ele faz um acordo com Shrek: se ele resgatar a princesa, ele lhe devolverá seu pântano.</p>
 
     </main>
 
