--- a/Shrek_2.html
+++ b/Shrek_2.html
@@ -45,6 +45,27 @@
         </ul>
     </nav>
 
+    <main>
+        <h1>Shrek 2</h1>
+
+        <div class="multimidia">
+            <picture>
+                <source media="(max-width: 750px)" srcset="imagens/capa_shrek_2-P.jpg">
+                <source media="(max-width: 1050px)" srcset="imagens/capa_shrek_2-M.jpg">        
+                <img src="imagens/capa_shrek_2-G.jpg" alt="Capa do Shrek 2">
+            </picture>
+        </div class="multimidia">
+
+        <p>Shrek 2 é um filme de animação norte-americano de 2004, dos gêneros aventura,comédia e fantasia, produzido pela DreamWorks Animation. É a sequência do filme Shrek (2001) e o segundo filme da franquia de mesmo nome.</p>
+        <p>A sinopse do filme é a seguinte: Shrek e Fiona acabaram de voltar da lua de mel e vivem felizes em sua casa no pântano. O casal recebe um convite dos pais da princesa, que querem conhecer o novo genro, para um jantar no castelo. Eles ficaram sabendo que Fiona havia se casado com o seu verdadeiro amor, mas o que eles ainda não sabem é que este amor é um ogro mal-educado de mais de 300 quilos, que conta com um burro falante como melhor amigo.</p>
+        <p>Você pode assistir o filme na Amazon Prime por esse <a href="https://www.primevideo.com/dp/amzn1.dv.gti.74b7f769-bf3c-a85b-2b17-45b3e660e62d?autoplay=0&ref_=atv_cf_strg_wb" target="_blank" rel="external">link.</a></p>
+        <p>Dá uma olhada no Trailer: </p>
+        <div class="videoYoutube">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/6SKf944GNig" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div class="videoYoutube">
+
+    </main>
+
 </body>
 
 </html>
