--- a/Shrek_4.html
+++ b/Shrek_4.html
@@ -44,6 +44,31 @@
         </ul>
     </nav>
 
+    <main>
+
+        <h1>Shrek 4 - Shrek Para Sempre</h1>
+        
+        <div class="multimidia">
+            <picture>
+                <source media="(max-width: 750px)" srcset="imagens/capa_Shrek_4-P.jpg">
+                <source media="(max-width: 1050px)" srcset="imagens/capa_Shrek_4-M.jpg">        
+                <img src="imagens/capa_Shrek_4-G.jpg" alt="Capa do Filme Shrek 4.">
+            </picture>
+        </div class="multimidia">
+
+        <p>Shrek Forever After ou Shrek: The Final Chapter, também estilizado como Shrek 4ever After, também chamado como Shrek para Sempre: O Capítulo Final é um filme estadunidense de animação, comédia aventura, fantasia e romance, lançado em maio de 2010, dirigido por Mike Mitchell, com roteiro de Josh Klausner & Darren Lemke. É o quarto filme da franquia e a continuação de Shrek Terceiro (2007).</p>
+        <p>Embora tenha sido anunciado como o último filme da franquia, a DreamWorks anunciou posteriormente um quinto filme com previsão de estréia para 2019.</p>
+        <p>A sinopse do filme é a seguinte: Há muito tempo ajustado à vida de casado e totalmente domesticado, Shrek fica entediado e começa a ter saudades dos dias em que se sentia um ogro de verdade. Para recuperá-los, ele firma um pacto com Rumpelstiltskin e é levado a um mundo onde ogros são caçados e ele e Fiona nunca se conheceram, além de que seus amigos Burro e Gato de Botas também não o reconhecem. Shrek precisa encontrar um jeito de se livrar do contrato para recuperar sua vida normal e seu grande amor.</p>
+
+        <p>Tu pode assistir o filme na Netflix por esse <a href="https://www.netflix.com/br/title/70117295?source=35" target="_blank" rel="external">link.</a></p>
+        
+        <p>Se liga no Trailer: </p>
+        <div class="videoYoutube">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/TlRgGvROYOM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div class="videoYoutube">
+
+    </main>
+
 </body>
 
 </html>
