--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 
         <div class="multimidia">
             <picture>
-                <source media="(max-width: 750px)" srcset="imagens/capa_shrek-P.jpg">
-                <source media="(max-width: 1050px)" srcset="imagens/capa_shrek-M.jpg">        
-                <img src="imagens/capa_shrek-G.jpg" alt="Capa do Shrek 1 com Fiona, Shrek e Burro fugindo da Dragoa do Castelo.">
+                <source media="(max-width: 750px)" srcset="imagens/banner_Shrek_1-P.jpg">
+                <source media="(max-width: 1050px)" srcset="imagens/banner_Shrek_1-M.jpg">        
+                <img src="imagens/banner_Shrek_1-G.jpg" alt="Um banner do Shrek 1, com Burro, Shrek, Fione e Lord Farquaad.">
             </picture>
         </div class="multimidia">
 
