--- a/Shrek_1.html
+++ b/Shrek_1.html
@@ -44,9 +44,24 @@
     </nav>
 
     <main>
-        <!--Ideia pras páginas de Filmes, Link pra ver o Filme na Disney e etc-->
-        <!--Pode ir mudando a Plataforma de acordo com os filmes, tipo apple tv e google filmes-->
-        <a href="https://www.netflix.com/br/title/60020686?source=35" target="_blank" rel="external">Assista Shrek 1 na Netflix</a>
+
+        <h1>Shrek 1</h1>
+
+        <div class="multimidia">
+            <picture>
+                <source media="(max-width: 750px)" srcset="imagens/capa_shrek-P.jpg">
+                <source media="(max-width: 1050px)" srcset="imagens/capa_shrek-M.jpg">        
+                <img src="imagens/capa_shrek-G.jpg" alt="Capa do Shrek 1 com Fiona, Shrek e Burro fugindo da Dragoa do Castelo.">
+            </picture>
+        </div class="multimidia">
+        
+        <p>Shrek é um filme norte-americano de 2001 de animação dos gêneros fantasia, aventura e comédia produzido pela PDI/DreamWorks, lançado pela DreamWorks Pictures</p>
+        <p>A sinopse do filme é a seguinte: Um ogro tem sua vida invadida por personagens de contos de fadas que acabam com a tranquilidade de seu lar. Ele faz um acordo pra resgatar uma princesa.</p>
+        <p>Você pode assitir o filme na Netflix a partir desse <a href="https://www.netflix.com/br/title/60020686?source=35" target="_blank" rel="external">link</a></p>
+        <p>Se tu quiser, tu pode dar uma olhada no trailer filme aqui: (Em Inglês)</p>
+        <div class="videoYoutube">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/CwXOrWvPBPk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div class="videoYoutube">
 
     </main>
 
