--- a/Shrek_3.html
+++ b/Shrek_3.html
@@ -24,7 +24,6 @@
                 <li><a href="Shrek_2.html">Shrek 2</a></li>
                 <li><a href="Shrek_3.html">Shrek 3</a></li>
                 <li><a href="Shrek_4.html" rel="next">Shrek 4</a></li>
-                <li><a href="Shrek_5.html">Shrek 5?</a></li>
             </ul>
         </li>
 
@@ -44,6 +43,29 @@
         <li><a href="cenas_e_memes.html">Cenas Icônicas e Memes</a></li>
         </ul>
     </nav>
+
+    <main>
+
+        <h1>Shrek 3</h1>
+
+        <div class="multimidia">
+            <picture>
+                <source media="(max-width: 750px)" srcset="imagens/capa_shrek_3-P.jpg">
+                <source media="(max-width: 1050px)" srcset="imagens/capa_shrek_3-M.jpg">        
+                <img src="imagens/capa_shrek_3-G.jpg" alt="Capa do filme Shrek 3">
+            </picture>
+        </div class="multimidia">
+
+        <p>Shrek the Third (Shrek Terceiro), também conhecido como Shrek 3, é um filme de animação, comédia, aventura e fantasia norte-americano de 2007, dirigido por Chris Miller, co-dirigido por Raman Hui, produzido por Jeffrey Katzenberg, da DreamWorks Animation e distribuído pela Paramount Pictures. É a continuação de Shrek (2001), Shrek 2 (2004), é o terceiro filme da franquia de filmes de mesmo nome.</p>
+        <p>A sinopse do filme é a seguinte: Doente em estado terminal, o rei Harold chama Fiona e Shrek para uma conversa sobre a sucessão de seu reinado e o futuro do povo em Tão Tão Distante. Como o genro se recusa a assumir o trono e prefere continuar sua pacata vida no pântano, a única saída é encontrar o primo Artur. Na companhia do Burro e do Gato de Botas, Shrek se encarrega da missão e sai em busca do parente que pode ser seu substituto no trono. Mas, antes de cumprir a tarefa, enfrenta as armações do ambicioso Príncipe Encantado.</p>
+
+        <p>Você comprar ou alugar o filme na Google Play Filmes por esse <a href="https://play.google.com/store/movies/details?id=ZkzamsRikeY&pli=1" target="_blank" rel="external">link.</a></p>
+        <p>Se liga no Trailer: </p>
+        <div class="videoYoutube">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/THBsGZmxRN8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div class="videoYoutube">
+
+    </main>
 
 </body>
 
